--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="index.css">
     
 </head>
-<body>
-    <script src="three.js"></script>
-    <script src="index.js"></script>
+<body>  
+    <canvas id="demo">
+        <script src="three.js"></script>
+        <script type ="module" src="OrbitControls.js"></script>
+        <script type ="module" src="index.js"></script>
+    </canvas>
 </body>
 </html>
