--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     
 </head>
 <body>
-    <script src="three.js"></script>
-    <script src="index.js"></script>
+    <canvas id="demo">
+        <script src="three.js"></script>
+        <script type ="module" src="OrbitControls.js"></script>
+        <script type ="module" src="index.js"></script>
+    </canvas>
 </body>
 </html>
