--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.2.4/dist/gsap.js"></script>
     <link rel="stylesheet" href="index.css">
     
 </head>
@@ -12,6 +13,7 @@
     <canvas id="demo">
         <script src="three.js"></script>
         <script type ="module" src="OrbitControls.js"></script>
+        <script type ="module" src="GLTFLoader.js"></script>
         <script type ="module" src="index.js"></script>
     </canvas>
 </body>
